Correct z-index

--- a/board-styles.css
+++ b/board-styles.css
@@ -59,7 +59,7 @@
     display: block;
     position: absolute;
     width: max-content;
-    z-index: 5;
+    z-index: 7;
 }
 .board-square {
     overflow: hidden;
@@ -72,7 +72,7 @@
 }
 .piece-dragged-over {
     outline: calc(var(--board-square-width) / 25) solid white;
-    z-index: 2;
+    z-index: 1;
     box-shadow: 0 0 calc(var(--board-square-width) * 3/50) calc(var(--board-square-width) / 100) rgba(0, 0, 0, 0.6);
 }
 .chess-piece {
@@ -90,7 +90,7 @@
     font-weight: bold;
     display: flex;
     position: absolute;
-    z-index: 3;
+    z-index: 5;
     pointer-events: none;
 }
 #file-indicator {
@@ -132,7 +132,7 @@
     height: 100%;
     background-color: rgba(255, 255, 0, 0.5);
     outline-offset: round(up, calc(var(--board-square-width) / -25), 1px);
-    z-index: 2;
+    z-index: 3;
     pointer-events: none;
 }
 
@@ -147,7 +147,7 @@
     transform: translate(-50%, -50%);
     animation: fade-in 0.2s var(--emphasis-animation);
     transition: width 0.2s var(--emphasis-animation), height 0.2s var(--emphasis-animation);
-    z-index: 4;
+    z-index: 6;
     pointer-events: none;
 }
 .empty-move-indicator {
@@ -181,7 +181,7 @@
     border: 2px solid gainsboro;
     box-shadow: 8px 16px 16px rgba(0, 0, 0, 0.2);
     animation: appear 0.3s ease-in-out;
-    z-index: 7;
+    z-index: 9;
     & > button {
         padding: 0;
         margin: 0;
