--- a/general-styles.css
+++ b/general-styles.css
@@ -300,7 +300,7 @@ input[type="text"], input[type="email"], textarea {
     background-color: var(--background-color);
     border: var(--border);
     border-radius: var(--box-radius);
-    z-index: 7;
+    z-index: 11;
     will-change: transform;
 }
 .overflow-container > button {
@@ -317,7 +317,6 @@ input[type="text"], input[type="email"], textarea {
 /* Drop-down menus */
 .drop-down-menu-container {
     position: relative;
-    z-index: 9;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
@@ -356,6 +355,7 @@ input[type="text"], input[type="email"], textarea {
     border: var(--border);
     border-radius: var(--box-radius);
     box-shadow: 8px 16px 16px var(--shadow-color);
+    z-index: 11;
 }
 .drop-down-menu > button {
     width: 100%;
@@ -374,7 +374,7 @@ input[type="text"], input[type="email"], textarea {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
-    z-index: 8;
+    z-index: 12;
 }
 .full-screen-box-container > div {
     position: absolute;
